--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="WebStudio" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -16,139 +17,161 @@
   <body>
     <!-- Nagłówek -->
     <header class="header">
-      <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
-      <div>
-        <nav>
-          <ul class="menu">
-            <li>Agencja</li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="./kontakt">Kontakt</a></li>
+      <div class="container">
+        <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
+        <nav class="navigation">
+          <ul class="nav-menu">
+            <li class="nav-menu-item">Agencja</li>
+            <li class="nav-menu-item"><a class="nav-menu-item-link" href="./portfolio.html">Portfolio</a></li>
+            <li class="nav-menu-item"><a class="nav-menu-item-link" href="./kontakt">Kontakt</a></li>
           </ul>
         </nav>
         <div class="contact">
-          <a href="mailto:info@devstudio.com">info@mdevstudio.com</a>
-          <a href="tel:+48111111111">+48 111-111-111</a>
+          <a class="contact-link" href="mailto:info@devstudio.com">info@mdevstudio.com</a>
+          <a class="contact-link" href="tel:+48111111111">+48 111-111-111</a>
         </div>
-      </div>
-      <div class="header-info">
-        <h1 class="motto">EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
-        <button type="button" class="main-button">Zamów usługe</button>
       </div>
     </header>
     <!-- Strona -->
     <main>
-      <ul>
-        <li>
-          <p class="lorem-title">LOREM IPSUM</p>
-          <p class="lorem-tesxt">
+      <div class="header-info">
+        <h1 class="motto">EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
+        <button type="button" class="main-button">Zamów usługe</button>
+      </div>
+      <section class="news">
+      <div class="container">
+        <ul class="news-list">
+        <li class="news-item">
+          <p class="news-title">LOREM IPSUM</p>
+          <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-        <li>
-          <p class="lorem-title">LOREM IPSUM</p>
-          <p class="lorem-tesxt">
+        <li class="news-item">
+          <p class="news-title">LOREM IPSUM</p>
+          <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-        <li>
-          <p class="lorem-title">LOREM IPSUM</p>
-          <p class="lorem-tesxt">
+        <li class="news-item">
+          <p class="news-title">LOREM IPSUM</p>
+          <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-        <li>
-          <p class="lorem-title">LOREM IPSUM</p>
-          <p class="lorem-tesxt">
+        <li class="news-item">
+          <p class="news-title">LOREM IPSUM</p>
+          <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
             arcu sem. Sed non sodales dui. Interdum et malesuada
           </p>
         </li>
-      </ul>
+        </ul>
+      </div>
+      </section>
       <!-- Prezentacja -->
-      <section>
+      <section class="about">
+        <div class="container">
         <h2 class="section-head">Czym się zajmujemy</h2>
-        <img
+        <ul class="about-list">
+          <li class="about-item"><img
           src="images/img1.jpg"
-          alt="praca nad kodem"
+          alt="praca nad interfejsem mobilnym"
           width="370"
-          height="294"
-        />
-        <img
+          height="294"/></li>
+          <li class="about-item"><img
           src="images/img2.jpg"
           alt="praca nad interfejsem mobilnym"
           width="370"
-          height="294"
-        />
-        <img
+          height="294"/></li>
+          <li class="about-item"><img
           src="images/img3.jpg"
-          alt="wybór koloru"
+          alt="praca nad interfejsem mobilnym"
           width="370"
-          height="294"
-        />
+          height="294"/></li>
+        </ul>
+        </div>
       </section>
-      <section>
+      <section class="team">
+        <div class="container">
         <h2 class="section-head">Nasz zespół</h2>
-        <table>
-          <tr>
-            <td>
+        <ul class="team-list">
+          <li class="team-item">
+            <figure>
               <img
                 src="images/team1.jpg"
-                alt="pracownik Product Designer"
+                alt="Product Designer"
                 width="270"
                 height="260"
               />
-            </td>
-            <td>
+              <figcaption>
+                <p class="team-name">John Doe</p>
+                <p class="team-job">Product Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="team-item">
+            <figure>
               <img
                 src="images/team2.jpg"
-                alt="pracownik Frontend Developer"
+                alt="Frontend Developer"
                 width="270"
                 height="260"
               />
-            </td>
-            <td>
+              <figcaption>
+                <p class="team-name">John Doe</p>
+                <p class="team-job">Frontend Developer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="team-item">
+            <figure>
               <img
                 src="images/team3.jpg"
-                alt="pracownik Marketing"
+                alt="Marketing"
                 width="270"
                 height="260"
               />
-            </td>
-            <td>
+              <figcaption>
+                <p class="team-name">John Doe</p>
+                <p class="team-job">Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li class="team-item">
+            <figure>
               <img
                 src="images/team4.jpg"
-                alt="pracownik UI Designer"
+                alt="UI Designer"
                 width="270"
                 height="260"
               />
-            </td>
-          </tr>
-          <tr class="team-name">
-            <td>John Doe</td>
-            <td>John Doe</td>
-            <td>John Doe</td>
-            <td>John Doe</td>
-          </tr>
-          <tr class="team-job">
-            <td>Product Designer</td>
-            <td>Frontend Developer</td>
-            <td>Marketing</td>
-            <td>UI Designer</td>
-          </tr>
-        </table>
+              <figcaption>
+                <p class="team-name">John Doe</p>
+                <p class="team-job">UI Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+        </div>
       </section>
     </main>
     <!-- Stopka -->
     <footer class="footer">
-      <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
-      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@mdevstudio.com</a></li>
-        <li><a href="tel:+48111111111">+48 111-111-111</a></li>
-      </ul>
+      <div class="container">
+        <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
+        <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
+        <ul>
+          <li class="contact-link">
+            <a href="mailto:info@devstudio.com">info@mdevstudio.com</a>
+          </li>
+          <li class="contact-link">
+            <a href="tel:+48111111111">+48 111-111-111</a>
+          </li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
