--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
       <div class="container">
         <ul class="news-list">
         <li class="news-item">
+          <div class="icon">
+          <svg width="70" height="70">
+            <use href="./images/icons.svg#antena"></use>
+          </svg>
+          </div>
           <p class="news-title">LOREM IPSUM</p>
           <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -49,6 +54,11 @@
           </p>
         </li>
         <li class="news-item">
+          <div class="icon">
+          <svg width="70" height="70">
+            <use href="./images/icons.svg#clock"></use>            
+          </svg>
+          </div>
           <p class="news-title">LOREM IPSUM</p>
           <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -56,6 +66,11 @@
           </p>
         </li>
         <li class="news-item">
+          <div class="icon">
+          <svg width="70" height="70">
+            <use href="./images/icons.svg#diagram"></use>
+          </svg>
+          </div>          
           <p class="news-title">LOREM IPSUM</p>
           <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -63,6 +78,11 @@
           </p>
         </li>
         <li class="news-item">
+          <div class="icon">
+          <svg width="70" height="70">
+            <use href="./images/icons.svg#astronaut"></use>
+          </svg>
+          </div>          
           <p class="news-title">LOREM IPSUM</p>
           <p class="news-text">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
@@ -155,6 +175,11 @@
               </figcaption>
             </figure>
           </li>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+        <h2 class="section-head">Nasi klienci</h2>    
         </div>
       </section>
     </main>
