--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
           </ul>
         </nav>
         <div class="contact">
+          <svg class="contact-icon" width="16" height="12">
+            <use href="./images/icons.svg#envelope"></use>
+          </svg>
           <a class="contact-link" href="mailto:info@devstudio.com">info@mdevstudio.com</a>
-          <a class="contact-link" href="tel:+48111111111">+48 111-111-111</a>
+          <svg class="contact-icon" width="10" height="16">
+            <use href="./images/icons.svg#phone"></use>
+          </svg>
+          <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
         </div>
       </div>
     </header>
@@ -44,7 +50,7 @@
         <li class="news-item">
           <div class="icon">
           <svg width="70" height="70">
-            <use href="./images/icons.svg#antena"></use>
+            <use href="./images/icons.svg#antenna"></use>
           </svg>
           </div>
           <p class="news-title">LOREM IPSUM</p>
@@ -178,9 +184,55 @@
         </div>
       </section>
       <section>
-        <div class="container">
+      <div class="container">
         <h2 class="section-head">Nasi klienci</h2>    
+        <div>
+          <ul class="customers-list">
+            <li class="customers-list-item">          
+              <div>
+                <svg class="customers-list-item-box" width="106" height="60">
+                  <use href="./images/icons.svg#comp1"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-list-item">          
+              <div>
+                <svg class="customers-list-item-box" width="106" height="60">
+                  <use href="./images/icons.svg#comp2"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-list-item">          
+              <div>
+                <svg class="customers-list-item-box" width="106" height="60">
+                  <use href="./images/icons.svg#comp3"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-list-item">          
+              <div>
+                <svg class="customers-list-item-box" width="106" height="60">
+                  <use href="./images/icons.svg#comp4"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-list-item">          
+              <div>
+                <svg class="customers-list-item-box" width="106" height="60">
+                  <use href="./images/icons.svg#comp5"></use>
+                </svg>
+              </div>
+            </li>
+            <li class="customers-list-item">          
+              <div>
+                <svg class="customers-list-item-box" width="106" height="60">
+                  <use href="./images/icons.svg#comp6"></use>
+                </svg>
+              </div>
+            </li>
+          </ul>
         </div>
+      </div>
       </section>
     </main>
     <!-- Stopka -->
@@ -193,7 +245,7 @@
             <a href="mailto:info@devstudio.com">info@mdevstudio.com</a>
           </li>
           <li class="contact-link">
-            <a href="tel:+48111111111">+48 111-111-111</a>
+            <a href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
       </div>
