--- a/index.html
+++ b/index.html
@@ -27,14 +27,19 @@
           </ul>
         </nav>
         <div class="contact">
-          <svg class="contact-icon" width="16" height="12">
-            <use href="./images/icons.svg#envelope"></use>
-          </svg>
-          <a class="contact-link" href="mailto:info@devstudio.com">info@mdevstudio.com</a>
-          <svg class="contact-icon" width="10" height="16">
-            <use href="./images/icons.svg#phone"></use>
-          </svg>
-          <a class="contact-link" href="tel:+48111111111">+48 111 111 111</a>
+          <ul class="contact-list">
+            <li>
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>info@mdevstudio.com</a></li>
+            <li>
+            <a class="contact-link" href="tel:+48111111111">
+              <svg class="contact-icon" width="10" height="16">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>+48 111 111 111</a>
+            </li>
+          </ul>
         </div>
       </div>
     </header>
@@ -48,7 +53,7 @@
       <div class="container">
         <ul class="news-list">
         <li class="news-item">
-          <div class="icon">
+          <div class="news-item-icon">
           <svg width="70" height="70">
             <use href="./images/icons.svg#antenna"></use>
           </svg>
@@ -60,7 +65,7 @@
           </p>
         </li>
         <li class="news-item">
-          <div class="icon">
+          <div class="news-item-icon">
           <svg width="70" height="70">
             <use href="./images/icons.svg#clock"></use>            
           </svg>
@@ -72,7 +77,7 @@
           </p>
         </li>
         <li class="news-item">
-          <div class="icon">
+          <div class="news-item-icon">
           <svg width="70" height="70">
             <use href="./images/icons.svg#diagram"></use>
           </svg>
@@ -84,7 +89,7 @@
           </p>
         </li>
         <li class="news-item">
-          <div class="icon">
+          <div class="news-item-icon">
           <svg width="70" height="70">
             <use href="./images/icons.svg#astronaut"></use>
           </svg>
@@ -136,6 +141,36 @@
               <figcaption>
                 <p class="team-name">John Doe</p>
                 <p class="team-job">Product Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>  
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>                
+                </ul>
               </figcaption>
             </figure>
           </li>
@@ -150,6 +185,36 @@
               <figcaption>
                 <p class="team-name">John Doe</p>
                 <p class="team-job">Frontend Developer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>  
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>                
+                </ul>
               </figcaption>
             </figure>
           </li>
@@ -164,6 +229,36 @@
               <figcaption>
                 <p class="team-name">John Doe</p>
                 <p class="team-job">Marketing</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>  
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>                
+                </ul>
               </figcaption>
             </figure>
           </li>
@@ -178,6 +273,36 @@
               <figcaption>
                 <p class="team-name">John Doe</p>
                 <p class="team-job">UI Designer</p>
+                <ul class="social-list">
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>  
+                  <li class="social-list-item">
+                    <a class="social-list-link" href="#">
+                      <svg class="social-icon">
+                        <use href="/images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>                
+                </ul>
               </figcaption>
             </figure>
           </li>
