--- a/index.html
+++ b/index.html
@@ -145,28 +145,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>  
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>                
@@ -189,28 +189,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>  
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>                
@@ -233,28 +233,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>  
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>                
@@ -277,28 +277,28 @@
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>  
                   <li class="social-list-item">
                     <a class="social-list-link" href="#">
                       <svg class="social-icon">
-                        <use href="/images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>                
