--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
     <!-- Stopka -->
     <footer class="footer">
       <div class="container">
+        <div>
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
         <ul>
@@ -373,6 +374,40 @@
             <a href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
+        </div>
+        <div class="social-footer">
+          <p class="join-us">Dołącz do nas</p>
+          <ul class="social-footer-list">
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>              
+            </li>
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>              
+            </li>
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>                              
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
