--- a/portfolio.html
+++ b/portfolio.html
@@ -38,10 +38,22 @@
           </ul>
         </nav>
         <div class="contact">
-          <a class="contact-link" href="mailto:info@devstudio.com"
-            >info@mdevstudio.com</a
-          >
-          <a class="contact-link" href="tel:+48111111111">+48 111-111-111</a>
+          <ul class="contact-list">
+            <li>
+              <a class="contact-link" href="mailto:info@devstudio.com">
+                <svg class="contact-icon" width="16" height="12">
+                  <use href="./images/icons.svg#envelope"></use></svg
+                >info@mdevstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-link" href="tel:+48111111111">
+                <svg class="contact-icon" width="10" height="16">
+                  <use href="./images/icons.svg#phone"></use></svg
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
         </div>
       </div>
     </header>
