--- a/portfolio.html
+++ b/portfolio.html
@@ -42,17 +42,13 @@
             <li>
               <a class="contact-link" href="mailto:info@devstudio.com">
                 <svg class="contact-icon" width="16" height="12">
-                  <use href="./images/icons.svg#envelope"></use></svg
-                >info@mdevstudio.com</a
-              >
-            </li>
+                  <use href="./images/icons.svg#envelope"></use>
+                </svg>info@mdevstudio.com</a></li>
             <li>
               <a class="contact-link" href="tel:+48111111111">
                 <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/icons.svg#phone"></use></svg
-                >+48 111 111 111</a
-              >
-            </li>
+                  <use href="./images/icons.svg#phone"></use>
+                </svg>+48 111 111 111</a></li>
           </ul>
         </div>
       </div>
@@ -202,6 +198,7 @@
     <!-- Stopka -->
     <footer class="footer">
       <div class="container">
+        <div>
         <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
         <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
         <ul>
@@ -212,6 +209,40 @@
             <a href="tel:+48111111111">+48 111 111 111</a>
           </li>
         </ul>
+        </div>
+        <div class="social-footer">
+          <p class="join-us">Dołącz do nas</p>
+          <ul class="social-footer-list">
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>              
+            </li>
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>              
+            </li>
+            <li>
+              <a class="social-list-link" href="#">
+                <svg class="social-icon">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>                              
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
