--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,17 @@
             <li>
               <a class="contact-link" href="mailto:info@devstudio.com">
                 <svg class="contact-icon" width="16" height="12">
-                  <use href="./images/icons.svg#envelope"></use>
-                </svg>info@mdevstudio.com</a></li>
+                  <use href="./images/icons.svg#envelope"></use></svg
+                >info@mdevstudio.com</a
+              >
+            </li>
             <li>
               <a class="contact-link" href="tel:+48111111111">
                 <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/icons.svg#phone"></use>
-                </svg>+48 111 111 111</a></li>
+                  <use href="./images/icons.svg#phone"></use></svg
+                >+48 111 111 111</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -199,16 +203,16 @@
     <footer class="footer">
       <div class="container">
         <div>
-        <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
-        <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
-        <ul>
-          <li class="contact-link">
-            <a href="mailto:info@devstudio.com">info@mdevstudio.com</a>
-          </li>
-          <li class="contact-link">
-            <a href="tel:+48111111111">+48 111 111 111</a>
-          </li>
-        </ul>
+          <a href="#" class="logo"><span class="logo-begin">Web</span>Studio</a>
+          <address class="address">m. Warszawa, Aleje Jerozolimskie 21</address>
+          <ul>
+            <li class="contact-link">
+              <a href="mailto:info@devstudio.com">info@mdevstudio.com</a>
+            </li>
+            <li class="contact-link">
+              <a href="tel:+48111111111">+48 111 111 111</a>
+            </li>
+          </ul>
         </div>
         <div class="social-footer">
           <p class="join-us">Dołącz do nas</p>
@@ -225,21 +229,21 @@
                 <svg class="social-icon">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
-              </a>              
+              </a>
             </li>
             <li>
               <a class="social-list-link" href="#">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
-              </a>              
+              </a>
             </li>
             <li>
               <a class="social-list-link" href="#">
                 <svg class="social-icon">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
-              </a>                              
+              </a>
             </li>
           </ul>
         </div>
