--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
             <li class="nav-menu-item">
               <a class="nav-menu-item-link" href="./index.html">Agencja</a>
             </li>
-            <li class="nav-menu-item">
+            <li class="nav-menu-item current">
               <a class="nav-menu-item-link" href="./portfolio.html"
                 >Portfolio</a
               >
