--- a/portfolio.html
+++ b/portfolio.html
@@ -38,22 +38,18 @@
           </ul>
         </nav>
         <div class="contact">
-          <ul class="contact-list">
-            <li>
-              <a class="contact-link" href="mailto:info@devstudio.com">
-                <svg class="contact-icon" width="16" height="12">
-                  <use href="./images/icons.svg#envelope"></use></svg
-                >info@mdevstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="contact-link" href="tel:+48111111111">
-                <svg class="contact-icon" width="10" height="16">
-                  <use href="./images/icons.svg#phone"></use></svg
-                >+48 111 111 111</a
-              >
-            </li>
-          </ul>
+        <ul class="contact-list">
+          <li>
+            <a class="contact-link" href="mailto:info@devstudio.com">
+              <svg class="contact-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+                </svg>info@mdevstudio.com</a></li>
+          <li>
+            <a class="contact-link" href="tel:+48111111111">
+              <svg class="contact-icon" width="10" height="16">
+                  <use href="./images/icons.svg#phone"></use>
+              </svg>+48 111 111 111</a></li>
+        </ul>
         </div>
       </div>
     </header>
@@ -71,13 +67,16 @@
       <section class="container">
         <ul class="portfolio-content">
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por1.jpg"
                 alt="laptop view"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>
               <figcaption>
                 <p class="company">Technocrack</p>
                 <p class="company-type">Marketing</p>
@@ -85,13 +84,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por2.jpg"
                 alt="basketball players"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>              
               <figcaption>
                 <p class="company">New Orlean vs Golden Star</p>
                 <p class="company-type">Dizajn</p>
@@ -99,13 +101,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por3.jpg"
                 alt="seafood restaurant logo"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>              
               <figcaption>
                 <p class="company">Restauracja Seafood</p>
                 <p class="company-type">Aplikacja</p>
@@ -113,13 +118,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por4.jpg"
                 alt="headphones"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>  
               <figcaption>
                 <p class="company">Projekt Prime</p>
                 <p class="company-type">Marketing</p>
@@ -127,13 +135,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por5.jpg"
                 alt="boxes"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>  
               <figcaption>
                 <p class="company">Projekt Boxes</p>
                 <p class="company-type">Aplikacja</p>
@@ -141,13 +152,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por6.jpg"
                 alt="monitor"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>  
               <figcaption>
                 <p class="company">Inspiration has no Borders</p>
                 <p class="company-type">Strona internetowa</p>
@@ -155,13 +169,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por7.jpg"
                 alt="book"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>  
               <figcaption>
                 <p class="company">Magazyn Limited Edition</p>
                 <p class="company-type">Dizajn</p>
@@ -169,13 +186,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por8.jpg"
                 alt="product tag"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>  
               <figcaption>
                 <p class="company">Projekt LAB</p>
                 <p class="company-type">Marketing</p>
@@ -183,13 +203,16 @@
             </figure>
           </li>
           <li class="portfolio-content-list">
-            <figure>
+            <figure class="portfolio-box">
               <img
                 src="./images/por9.jpg"
                 alt="man working on laptop"
                 width="370"
                 height="294"
               />
+              <div class="portfolio-overflow">
+                <p class="portfolio-overflow-txt">Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na niezabezpieczone serwery konkurencji</p>
+              </div>  
               <figcaption>
                 <p class="company">Growing Business</p>
                 <p class="company-type">Aplikacja</p>
